Defining adapter and view holder to config recyclerview. Defining  extention function convertor to  time stamp into date time

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.blu.testcase">
 
     <application
-        android:name=".base.BluTestCaseApplication"
+        android:name="com.blu.testcase.appUtilities.base.BluTestCaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
